<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonFromFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_from_files"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/buttonFromWallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_from_wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textViewLightVibrant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/light_vibrant"
        app:layout_constraintBottom_toTopOf="@+id/textViewVibrant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewVibrant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/vibrant"
        app:layout_constraintBottom_toTopOf="@+id/textViewDarkVibrant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLightVibrant" />

    <TextView
        android:id="@+id/textViewDarkVibrant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dark_vibrant"
        app:layout_constraintBottom_toTopOf="@+id/textViewLightMuted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVibrant" />

    <TextView
        android:id="@+id/textViewLightMuted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/light_muted"
        app:layout_constraintBottom_toTopOf="@+id/textViewMuted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDarkVibrant" />

    <TextView
        android:id="@+id/textViewMuted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/muted"
        app:layout_constraintBottom_toTopOf="@+id/textViewDarkMuted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLightMuted" />

    <TextView
        android:id="@+id/textViewDarkMuted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dark_muted"
        app:layout_constraintBottom_toTopOf="@+id/buttonFromWallpaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMuted" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>